--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,6 +8,7 @@
     float: right;
     font-size: 22px;
     font-weight: bold;
+    padding-top: 10px;
 }
 
 
@@ -68,6 +69,110 @@
 .pagination-drop-down {
     margin-left: 16px;
     height: 42px;
+}
+
+.notifications {
+    list-style: none;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    z-index: 3;
+    padding-left: 0px;
+    margin-left: 0px;
+    margin-bottom: 0px;
+}
+
+.notifications__item.visible {
+    transform: none;
+    transition: all 250ms ease-out;
+}
+
+.notifications__item--warning {
+    background-color: #AA354C;
+}
+
+.notifications__item {
+    margin-bottom: 0px;
+    margin-left: 0px;
+    padding: 24px 160px;
+    background-color: #AA354C;
+    color: #E7E8E9;
+    font-size: 18px;
+    margin-top: 3px;
+    -webkit-transform: translateY(103%);
+    transform: translateY(103%);
+    transition: all 100ms ease-out;
+}
+
+.notifications__button:hover {
+    text-decoration: underline;
+}
+
+.notifications__button:first-of-type {
+    margin-left: 40px;
+}
+
+.notifications__button {
+    background-color: transparent;
+    color: #E7E8E9;
+    padding: 0;
+    float: right;
+    font-size: 18px;
+    text-transform: uppercase;
+    border: 0;
+    cursor: pointer;
+    outline: none;
+}
+
+.govuk-phase-banner__content {
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.govuk-phase-banner__content__tag {
+    margin-right: 10px;
+}
+
+.govuk-tag {
+    display: inline-block;
+    outline: 2px solid transparent;
+    outline-offset: -2px;
+    color: #fff;
+    background-color: #1d70b8;
+    letter-spacing: 1px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: "GDS Transport", Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-weight: 700;
+    font-size: 21px;
+    line-height: 1;
+    padding-top: 5px;
+    padding-right: 8px;
+    padding-bottom: 4px;
+    padding-left: 8px;
+}
+
+.govuk-phase-banner__text {
+    display: inline;
+    vertical-align: baseline;
+    color: white;
+    font-size: 18px;
+}
+
+.govuk-link {
+    font-family: "GDS Transport", Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.govuk-link:visited {
+    color: #4c2c92;
+}
+
+.govuk-link:link {
+    colour: #1d70b8;
 }
 
 body {
